web/streamlit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-muta-server
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8501
  type: NodePort
  selector:
    name: streamlit-muta-server
